Fix things about old fetch